# P-NES

./: .gitignore  CMakeLists.txt  Header.hpp  Makefile  README.md  build.zig  build.zig.zon  log.hpp  main.cpp
.cache/clangd/index/: Header.cpp.0180A9CC8FCD4F31.idx  Header.hpp.3B63D8FA35C6BEDE.idx  log.hpp.7EE918B6F3561CB2.idx  main.cpp.05541C2DC880A767.idx  types.hpp.B68848A7DD26399E.idx
aux/log_checker/: go.mod  log_checker.go
aux/roms/cottonplant/: test.s
lib/minilibx-linux/: compile_commands.json
roms/inkbox/: Makefile  inkbox.nes  inkbox.s
roms/s9/: s9.c  s9.nes  s9.s
src/: Bus.zig  CMakeLists.txt  Cartridge.zig  Cpu.zig  Disassembler.zig  Instruction.zig  main.cpp  main.zig
src/Bus/: Bus.hpp
src/Cartridge/: Cartridge.cpp  Cartridge.hpp  Header.hpp
src/Cpu/: Cpu.cpp  Cpu.hpp  Instruction.cpp  Instruction.hpp
src/NES/: Cpu.hpp
src/log/: log.hpp
src/parse/: GameData.cpp  GameData.hpp  Header.cpp  Header.hpp
src/types/: types.hpp
